Fixed content overflow for chat

--- a/src/app/main/container/chat/chat.component.css
+++ b/src/app/main/container/chat/chat.component.css
@@ -1,10 +1,17 @@
 /* Chat containers */
+.content {
+  min-height: 500px;
+  height: 80vh;
+  overflow: scroll;
+}
+
 .container {
   border: 2px solid #dedede;
   background-color: #f1f1f1;
   border-radius: 5px;
   padding: 10px;
   margin: 10px 0;
+  overflow: scroll;
 }
 
 /* Darker chat container */
